{
  "version": 4,
  "terraform_version": "1.8.3",
  "serial": 523,
  "lineage": "647d500a-bcec-b2ed-1b2a-6ae4ee484948",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "for-nat-gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0432b36a4841d6264",
            "association_id": "eipassoc-009aa12a6d5d46b05",
            "domain": "vpc",
            "id": "eipalloc-0432b36a4841d6264",
            "network_border_group": "us-east-1",
            "network_interface": "eni-04a5503d96c8fea4f",
            "private_dns": "ip-10-0-1-78.ec2.internal",
            "private_ip": "10.0.1.78",
            "public_dns": "ec2-34-228-90-67.compute-1.amazonaws.com",
            "public_ip": "34.228.90.67",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "name",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-060af23382be4dfe8",
            "association_id": "eipassoc-0de0d84eb85b499ef",
            "domain": "vpc",
            "id": "eipalloc-060af23382be4dfe8",
            "instance": "i-0bf29df080f483424",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0cb0f80592ec706bd",
            "private_dns": "ip-10-0-1-121.ec2.internal",
            "private_ip": "10.0.1.121",
            "public_dns": "ec2-52-55-133-72.compute-1.amazonaws.com",
            "public_ip": "52.55.133.72",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_instance.my-server",
            "aws_key_pair.my-key",
            "aws_network_interface.pubic-network-interface",
            "aws_security_group.allow-http",
            "aws_subnet.public-subnet",
            "aws_vpc.my-vpc",
            "data.aws_ami.amazon-linux"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "demo-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00beae93a2d981137",
            "arn": "arn:aws:ec2:us-east-1:590183895553:instance/i-08f83d37ec8f81183",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08f83d37ec8f81183",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "demo-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-09e1dc00eb954d3da"
              }
            ],
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-09e1dc00eb954d3da",
            "private_dns": "ip-172-30-1-229.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.30.1.229",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-04a29d8667d59d5a0",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d5ae9dc89160c65e",
            "tags": {
              "Name": "demo-instance"
            },
            "tags_all": {
              "Name": "demo-instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0bb46160b3f135f31"
            ]
          },
          "dependencies": [
            "aws_key_pair.demo-key-pair",
            "aws_network_interface.demo-network-interface",
            "aws_security_group.demo-security-group-allow-ssh",
            "aws_subnet.demo-public-subnet",
            "aws_vpc.demp-vpc",
            "data.aws_ami.amazon-linux-2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "my-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00beae93a2d981137",
            "arn": "arn:aws:ec2:us-east-1:590183895553:instance/i-0bf29df080f483424",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0bf29df080f483424",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "my-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-0cb0f80592ec706bd"
              }
            ],
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0cb0f80592ec706bd",
            "private_dns": "ip-10-0-1-121.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.121",
            "public_ip": "52.55.133.72",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-01b8c46a69b9c85a3",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e9df3f30db94d1a5",
            "tags": {
              "Name": "my-server"
            },
            "tags_all": {
              "Name": "my-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-03ad7eddd733d506e"
            ]
          },
          "dependencies": [
            "aws_key_pair.my-key",
            "aws_network_interface.pubic-network-interface",
            "aws_security_group.allow-http",
            "aws_subnet.public-subnet",
            "aws_vpc.my-vpc",
            "data.aws_ami.amazon-linux"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "private-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00beae93a2d981137",
            "arn": "arn:aws:ec2:us-east-1:590183895553:instance/i-0afe95c06e94d9787",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0afe95c06e94d9787",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "private-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-0f707a30ac20e3816"
              }
            ],
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0f707a30ac20e3816",
            "private_dns": "ip-10-0-2-104.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.104",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-026eb6d9ee45b7fb5",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0981d76a758e118db",
            "tags": {
              "Name": "private-server"
            },
            "tags_all": {
              "Name": "private-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-06916b7478ed29740"
            ]
          },
          "dependencies": [
            "aws_network_interface.private-network-interface",
            "aws_security_group.allow-access-to-internet",
            "aws_subnet.private-subnet",
            "aws_vpc.my-vpc",
            "data.aws_ami.amazon-linux"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "demo-public-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590183895553:internet-gateway/igw-08176fa814976e5ed",
            "id": "igw-08176fa814976e5ed",
            "owner_id": "590183895553",
            "tags": {
              "Name": "demo-public-igw"
            },
            "tags_all": {
              "Name": "demo-public-igw"
            },
            "vpc_id": "vpc-058b58156ff0feaf5"
          },
          "dependencies": [
            "aws_vpc.demp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590183895553:internet-gateway/igw-0ee6ce5b4c6ae1633",
            "id": "igw-0ee6ce5b4c6ae1633",
            "owner_id": "590183895553",
            "tags": {
              "Name": "my-vpc-igw"
            },
            "tags_all": {
              "Name": "my-vpc-igw"
            },
            "vpc_id": "vpc-0eaa31414c446c063"
          },
          "dependencies": [
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat-gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0432b36a4841d6264",
            "association_id": "eipassoc-009aa12a6d5d46b05",
            "connectivity_type": "public",
            "id": "nat-0c809aca081db4659",
            "network_interface_id": "eni-04a5503d96c8fea4f",
            "private_ip": "10.0.1.78",
            "public_ip": "34.228.90.67",
            "subnet_id": "subnet-0e9df3f30db94d1a5",
            "tags": {
              "Name": "gw NAT"
            },
            "tags_all": {
              "Name": "gw NAT"
            }
          },
          "dependencies": [
            "aws_eip.for-nat-gateway",
            "aws_internet_gateway.igw",
            "aws_subnet.public-subnet",
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "demo-network-interface",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590183895553:network-interface/eni-09e1dc00eb954d3da",
            "attachment": [
              {
                "attachment_id": "eni-attach-0ffde0ff66bafa1fa",
                "device_index": 0,
                "instance": "i-08f83d37ec8f81183"
              }
            ],
            "id": "eni-09e1dc00eb954d3da",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "02:df:d1:d4:a8:0b",
            "owner_id": "590183895553",
            "private_ip": "172.30.1.229",
            "private_ip_list": [
              "172.30.1.229"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "172.30.1.229"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0bb46160b3f135f31"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d5ae9dc89160c65e",
            "tags": {
              "Name": "demo-network-interface"
            },
            "tags_all": {
              "Name": "demo-network-interface"
            }
          },
          "dependencies": [
            "aws_security_group.demo-security-group-allow-ssh",
            "aws_subnet.demo-public-subnet",
            "aws_vpc.demp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "private-network-interface",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590183895553:network-interface/eni-0f707a30ac20e3816",
            "attachment": [
              {
                "attachment_id": "eni-attach-0a9e40df09f260865",
                "device_index": 0,
                "instance": "i-0afe95c06e94d9787"
              }
            ],
            "id": "eni-0f707a30ac20e3816",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "0e:75:4e:ac:d4:a9",
            "owner_id": "590183895553",
            "private_ip": "10.0.2.104",
            "private_ip_list": [
              "10.0.2.104"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.2.104"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-06916b7478ed29740"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0981d76a758e118db",
            "tags": {
              "Name": "private-network-interface"
            },
            "tags_all": {
              "Name": "private-network-interface"
            }
          },
          "dependencies": [
            "aws_security_group.allow-access-to-internet",
            "aws_subnet.private-subnet",
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "pubic-network-interface",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590183895553:network-interface/eni-0cb0f80592ec706bd",
            "attachment": [
              {
                "attachment_id": "eni-attach-0f6e1781674ed7be7",
                "device_index": 0,
                "instance": "i-0bf29df080f483424"
              }
            ],
            "id": "eni-0cb0f80592ec706bd",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "0a:ff:f8:af:0d:83",
            "owner_id": "590183895553",
            "private_ip": "10.0.1.121",
            "private_ip_list": [
              "10.0.1.121"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.1.121"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-03ad7eddd733d506e"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e9df3f30db94d1a5",
            "tags": {
              "Name": "pubic-network-interface"
            },
            "tags_all": {
              "Name": "pubic-network-interface"
            }
          },
          "dependencies": [
            "aws_security_group.allow-http",
            "aws_subnet.public-subnet",
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "route-to-demo-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "172.30.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0f2ee088984e7a2eb689798185",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0f2ee088984e7a2eb",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-05f553400786d0a9a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public-route-table",
            "aws_vpc.demp-vpc",
            "aws_vpc.my-vpc",
            "aws_vpc_peering_connection.my-peering-connection"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "route-to-my-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.0.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0b744e25d19b72542179966490",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0b744e25d19b72542",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-05f553400786d0a9a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.demo-public-igw",
            "aws_route_table.demo-public-route-table",
            "aws_vpc.demp-vpc",
            "aws_vpc.my-vpc",
            "aws_vpc_peering_connection.my-peering-connection"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "demo-public-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590183895553:route-table/rtb-0b744e25d19b72542",
            "id": "rtb-0b744e25d19b72542",
            "owner_id": "590183895553",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": null,
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": null,
                "destination_prefix_list_id": null,
                "egress_only_gateway_id": null,
                "gateway_id": "igw-08176fa814976e5ed",
                "instance_id": null,
                "ipv6_cidr_block": null,
                "local_gateway_id": null,
                "nat_gateway_id": null,
                "network_interface_id": null,
                "transit_gateway_id": null,
                "vpc_endpoint_id": null,
                "vpc_peering_connection_id": null
              }
            ],
            "tags": {
              "Name": "demo-public-route-table"
            },
            "tags_all": {
              "Name": "demo-public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-058b58156ff0feaf5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.demo-public-igw",
            "aws_vpc.demp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-subnet-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590183895553:route-table/rtb-0366dc89788b50b3b",
            "id": "rtb-0366dc89788b50b3b",
            "owner_id": "590183895553",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0c809aca081db4659",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private-subnet-route-table"
            },
            "tags_all": {
              "Name": "private-subnet-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0eaa31414c446c063"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.for-nat-gateway",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat-gateway",
            "aws_subnet.public-subnet",
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590183895553:route-table/rtb-0f2ee088984e7a2eb",
            "id": "rtb-0f2ee088984e7a2eb",
            "owner_id": "590183895553",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": null,
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": null,
                "destination_prefix_list_id": null,
                "egress_only_gateway_id": null,
                "gateway_id": "igw-0ee6ce5b4c6ae1633",
                "instance_id": null,
                "ipv6_cidr_block": null,
                "local_gateway_id": null,
                "nat_gateway_id": null,
                "network_interface_id": null,
                "transit_gateway_id": null,
                "vpc_endpoint_id": null,
                "vpc_peering_connection_id": null
              }
            ],
            "tags": {
              "Name": "public-route-table"
            },
            "tags_all": {
              "Name": "public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0eaa31414c446c063"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "demo-public-route_table_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0af990ac294d45995",
            "route_table_id": "rtb-0b744e25d19b72542",
            "subnet_id": "subnet-0d5ae9dc89160c65e"
          },
          "dependencies": [
            "aws_internet_gateway.demo-public-igw",
            "aws_route_table.demo-public-route-table",
            "aws_subnet.demo-public-subnet",
            "aws_vpc.demp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-subnet-assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04a4687ea34cfad9b",
            "route_table_id": "rtb-0366dc89788b50b3b",
            "subnet_id": "subnet-0981d76a758e118db"
          },
          "dependencies": [
            "aws_eip.for-nat-gateway",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat-gateway",
            "aws_route_table.private-subnet-route-table",
            "aws_subnet.private-subnet",
            "aws_subnet.public-subnet",
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route-table-assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00966d2f7931e8870",
            "route_table_id": "rtb-0f2ee088984e7a2eb",
            "subnet_id": "subnet-0e9df3f30db94d1a5"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public-route-table",
            "aws_subnet.public-subnet",
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow-access-to-internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590183895553:security-group/sg-06916b7478ed29740",
            "description": "Allow instances in private network access to the internet",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06916b7478ed29740",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.1.0/24"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow-access",
            "name_prefix": "",
            "owner_id": "590183895553",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow-acces-to-internet"
            },
            "tags_all": {
              "Name": "allow-acces-to-internet"
            },
            "timeouts": null,
            "vpc_id": "vpc-0eaa31414c446c063"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow-http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590183895553:security-group/sg-03ad7eddd733d506e",
            "description": "Allow httpd from everywhere",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03ad7eddd733d506e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow-http",
            "name_prefix": "",
            "owner_id": "590183895553",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow-http"
            },
            "tags_all": {
              "Name": "allow-http"
            },
            "timeouts": null,
            "vpc_id": "vpc-0eaa31414c446c063"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "demo-security-group-allow-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590183895553:security-group/sg-0bb46160b3f135f31",
            "description": "Allow ssh connection from the main vpc",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0bb46160b3f135f31",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "demo-allow-ssh",
            "name_prefix": "",
            "owner_id": "590183895553",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "demo-security-group-allow-ssh"
            },
            "tags_all": {
              "Name": "demo-security-group-allow-ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-058b58156ff0feaf5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.demp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "demo-public-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590183895553:subnet/subnet-0d5ae9dc89160c65e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.30.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d5ae9dc89160c65e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "590183895553",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "demo-public-subnet"
            },
            "tags_all": {
              "Name": "demo-public-subnet"
            },
            "vpc_id": "vpc-058b58156ff0feaf5"
          },
          "dependencies": [
            "aws_vpc.demp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590183895553:subnet/subnet-0981d76a758e118db",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0981d76a758e118db",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "590183895553",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet"
            },
            "tags_all": {
              "Name": "private-subnet"
            },
            "vpc_id": "vpc-0eaa31414c446c063"
          },
          "dependencies": [
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590183895553:subnet/subnet-0e9df3f30db94d1a5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e9df3f30db94d1a5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "590183895553",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet"
            },
            "tags_all": {
              "Name": "public-subnet"
            },
            "vpc_id": "vpc-0eaa31414c446c063"
          },
          "dependencies": [
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "demp-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590183895553:vpc/vpc-058b58156ff0feaf5",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.30.0.0/16",
            "default_network_acl_id": "acl-08b2839f0c4490ee6",
            "default_route_table_id": "rtb-00574809f2d25e75f",
            "default_security_group_id": "sg-07d85d7bf07c9e061",
            "dhcp_options_id": "dopt-0980f119b31083bad",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-058b58156ff0feaf5",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-00574809f2d25e75f",
            "owner_id": "590183895553",
            "tags": {
              "Name": "demo-vpc"
            },
            "tags_all": {
              "Name": "demo-vpc"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590183895553:vpc/vpc-0eaa31414c446c063",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-00aeaf8e7902ab8e1",
            "default_route_table_id": "rtb-0af159fe093ba8441",
            "default_security_group_id": "sg-040dee45c115255ed",
            "dhcp_options_id": "dopt-0980f119b31083bad",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0eaa31414c446c063",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0af159fe093ba8441",
            "owner_id": "590183895553",
            "tags": {
              "Name": "my-vpc"
            },
            "tags_all": {
              "Name": "my-vpc"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_peering_connection",
      "name": "my-peering-connection",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accept_status": "active",
            "accepter": [
              {
                "allow_classic_link_to_remote_vpc": false,
                "allow_remote_vpc_dns_resolution": false,
                "allow_vpc_to_remote_classic_link": false
              }
            ],
            "auto_accept": true,
            "id": "pcx-05f553400786d0a9a",
            "peer_owner_id": "590183895553",
            "peer_region": "us-east-1",
            "peer_vpc_id": "vpc-058b58156ff0feaf5",
            "requester": [
              {
                "allow_classic_link_to_remote_vpc": false,
                "allow_remote_vpc_dns_resolution": false,
                "allow_vpc_to_remote_classic_link": false
              }
            ],
            "vpc_id": "vpc-0eaa31414c446c063"
          },
          "dependencies": [
            "aws_vpc.demp-vpc",
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow-access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590183895553:security-group-rule/sgr-07f2ad8071c4defd1",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-07f2ad8071c4defd1",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-06916b7478ed29740",
            "security_group_rule_id": "sgr-07f2ad8071c4defd1",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.allow-access-to-internet",
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow-access-to-internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590183895553:security-group-rule/sgr-0d28cb2c696c72c36",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0d28cb2c696c72c36",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0bb46160b3f135f31",
            "security_group_rule_id": "sgr-0d28cb2c696c72c36",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.demo-security-group-allow-ssh",
            "aws_vpc.demp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow-http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590183895553:security-group-rule/sgr-01bc3d36e80225d86",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-01bc3d36e80225d86",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-03ad7eddd733d506e",
            "security_group_rule_id": "sgr-01bc3d36e80225d86",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.allow-http",
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590183895553:security-group-rule/sgr-00f46dab30ee84c83",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-00f46dab30ee84c83",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-03ad7eddd733d506e",
            "security_group_rule_id": "sgr-00f46dab30ee84c83",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.allow-http",
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow-ssh-private-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590183895553:security-group-rule/sgr-0349ecea9da9773f2",
            "cidr_ipv4": "10.0.1.0/24",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-0349ecea9da9773f2",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-06916b7478ed29740",
            "security_group_rule_id": "sgr-0349ecea9da9773f2",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.allow-access-to-internet",
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "demo-allow-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590183895553:security-group-rule/sgr-03d0e6b8ba1efa419",
            "cidr_ipv4": "10.0.1.0/24",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-03d0e6b8ba1efa419",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0bb46160b3f135f31",
            "security_group_rule_id": "sgr-03d0e6b8ba1efa419",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.demo-security-group-allow-ssh",
            "aws_vpc.demp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "ingress-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590183895553:security-group-rule/sgr-084ae0c1e3e5f678f",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-084ae0c1e3e5f678f",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-03ad7eddd733d506e",
            "security_group_rule_id": "sgr-084ae0c1e3e5f678f",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.allow-http",
            "aws_vpc.my-vpc"
          ]
        }
      ]
    }
  ]
}